[package]
authors = ["Jonathan Gao <gsmlg.com@gmail.com>"]
categories = ["wasm"]
description = "Yew app sample"
edition = "2021"
license = "GPLv3"
name = "yew-app-sample"
readme = "./README.md"
repository = "https://github.com/gsmlg-dev/yew-app-sample.git"
version = "0.1.0"
auto-build-binaries = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
required-features = ["ssr"]

[dependencies]
log = "0.4"
serde = "1"
serde_json = "1.0"
reqwest = { version = "0.11.13", features = ["json"] }
yew = { version = "0.20.0", features = ["csr", "ssr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
yewdux = "0.9"
stylist = { version = "0.11.0", features = ["yew_integration"] }
actix-web = "4.0"
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]

[features]
ssr = ["yew/ssr"]
hydration = ["yew/hydration"]